testing/ghost/ghost-admin-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ghost-admin
  namespace: testing
  annotations:
    # ingress.kubernetes.io/ssl-redirect: "false"
    # ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/app-root: /ghost
    # ingress.nginx.kubernetes.io/app-root: /ghost
    # kong.ingress.kubernetes.io/app-root: /ghost
    # kubernetes.io/ingress.class: traefik
    # kubernetes.io/ingress.class: kong
    # konghq.com/plugins: basic-auth
spec:
  # tls:
  # - hosts:
  #   - my.ghost.svc
  #   secretName: ghost-secret
  rules:
  - host: admin.ghost.svc
    http:
      paths:
      - path: /ghost
        # pathType: ImplementationSpecific
        # pathType: Exact
        pathType: Prefix
        backend:
          serviceName: ghost
          servicePort: 80
