testing/ghost/ghost-frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ghost-frontend
  namespace: testing
  annotations:
    # ingress.kubernetes.io/ssl-redirect: "false"
    #ingress.kubernetes.io/rewrite-target: "/"
    #kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/app-root: /ghost
    # kong.ingress.kubernetes.io/app-root: /ghost
    # kubernetes.io/ingress.class: traefik
    # kubernetes.io/ingress.class: kong
    # konghq.com/plugins: basic-auth
spec:
  # tls:
  # - hosts:
  #   - my.ghost.svc
  #   secretName: ghost-secret
  rules:
  - host: frontend.ghost.svc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: ghost
          servicePort: 80
